[workspace]
members = ["contracts", "greeter"]
# `default-members` is the set used by `cargo build` / `cargo test`
# at the workspace root when no `-p` flag is passed. Mirrors the same
# convention as `sdh-fleet/sdh-fleet-client/Cargo.toml`.
default-members = [".", "contracts", "greeter"]

[package]
name = "rust-poc"
version = "0.1.0"
edition = "2024"
# `cargo run` at the workspace root is ambiguous as soon as a second
# binary appears in `default-members` (e.g. `gen-schemas` in
# `contracts/`). Pinning the default binary keeps the muscle-memory
# `cargo run` working without having to type `-p rust-poc` every time.
# Lost once in commit 6add5f1 — restored here.
default-run = "rust-poc"
description = "Personal Rust learning workspace — workspace + traits + tests Hello World"
license = "MIT"
publish = false

[[bin]]
name = "rust-poc"
path = "src/main.rs"

[features]
default = []
# Propagates down to the contracts crate so a single
# `cargo build --features schema` from the workspace root unlocks the
# `gen-schemas` binary. Same wiring as
# `sdh-fleet-client/Cargo.toml` → contracts feature passthrough.
schema = ["rust-poc-contracts/schema"]

[dependencies]
rust-poc-contracts = { path = "contracts" }
rust-poc-greeter   = { path = "greeter" }
serde_json         = "1"

# Structured logging stack — same versions as sdh-fleet-client so the
# call-site idioms (info!, debug!, structured fields) transfer directly.
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender   = "0.2"

# Workspace-wide lint policy. Each member crate opts in via
# `[lints] workspace = true` in its own Cargo.toml.
[workspace.lints.clippy]
pedantic    = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"

[lints]
workspace = true
