[workspace]
members = ["contracts", "greeter", "rust-poc-lua"]
# `default-members` is the set used by `cargo build` / `cargo test`
# at the workspace root when no `-p` flag is passed. Mirrors the same
# convention as `sdh-fleet/sdh-fleet-client/Cargo.toml`.
default-members = [".", "contracts", "greeter", "rust-poc-lua"]

[package]
name = "rust-poc"
version = "0.1.0"
edition = "2024"
# `cargo run` at the workspace root is ambiguous as soon as a second
# binary appears in `default-members` (e.g. `gen-schemas` in
# `contracts/`). Pinning the default binary keeps the muscle-memory
# `cargo run` working without having to type `--bin` every time.
default-run = "collect-config"
description = "Personal Rust learning workspace — in-process Lua 5.4 collector driving rust-poc-lua"
license = "MIT"
publish = false

[[bin]]
# Binary name differs from the package name: the artifact identifies
# itself as the tool ("collect-config") while the package keeps the
# repo's identity ("rust-poc"). Same idiom as `cargo-edit` shipping
# `cargo-add` / `cargo-rm` from a package called `cargo-edit`.
name = "collect-config"
path = "src/main.rs"

[features]
default = []
# Propagates down to the contracts crate so a single
# `cargo build --features schema` from the workspace root unlocks the
# `gen-schemas` binary. Same wiring as
# `sdh-fleet-client/Cargo.toml` → contracts feature passthrough.
schema = ["rust-poc-contracts/schema"]

[dependencies]
rust-poc-contracts = { path = "contracts" }
rust-poc-greeter   = { path = "greeter" }
rust-poc-lua       = { path = "rust-poc-lua" }
serde_json         = "1"

# Structured logging stack — same versions as sdh-fleet-client so the
# call-site idioms (info!, debug!, structured fields) transfer directly.
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender   = "0.2"

# Used by the `collect-config` binary (src/bin/collect-config.rs).
# `InternalRuntime::run` is async + uses `tokio::task::spawn_blocking` +
# `tokio::time::timeout`, so the binary needs a multi-thread runtime.
# `hostname` provides the machine name in a cross-platform way (we pass
# it to InternalRuntime::new which surfaces it as `host.env("SDH_HOSTNAME")`
# on the Lua side).
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs"] }
hostname           = "0.4"

# Workspace-wide lint policy. Each member crate opts in via
# `[lints] workspace = true` in its own Cargo.toml.
[workspace.lints.clippy]
pedantic    = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"

[lints]
workspace = true
