[workspace]
members = ["contracts", "rust-poc-lua"]
# `default-members` is the set used by `cargo build` / `cargo test`
# at the workspace root when no `-p` flag is passed. Mirrors the same
# convention as `sdh-fleet/sdh-fleet-client/Cargo.toml`.
default-members = [".", "contracts", "rust-poc-lua"]

[package]
name = "rust-poc"
version = "0.1.0"
edition = "2024"
# `cargo run` at the workspace root is ambiguous as soon as a second
# binary appears in `default-members`. Pinning the default binary
# keeps the muscle-memory `cargo run` working without having to type
# `--bin` every time. Currently only one binary lives in the workspace
# (`collect-config`) so this is also future-proofing.
default-run = "collect-config"
description = "Personal Rust learning workspace — in-process Lua 5.4 collector driving rust-poc-lua"
license = "MIT"
publish = false

[[bin]]
# Binary name differs from the package name: the artifact identifies
# itself as the tool ("collect-config") while the package keeps the
# repo's identity ("rust-poc"). Same idiom as `cargo-edit` shipping
# `cargo-add` / `cargo-rm` from a package called `cargo-edit`.
name = "collect-config"
path = "src/main.rs"

[dependencies]
rust-poc-contracts = { path = "contracts" }
rust-poc-lua       = { path = "rust-poc-lua" }
serde_json         = "1"

# Structured logging stack — same versions as sdh-fleet-client so the
# call-site idioms (info!, debug!, structured fields) transfer directly.
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender   = "0.2"

# Used by the `collect-config` binary (src/main.rs).
# `InternalRuntime::run` is async + uses `tokio::task::spawn_blocking` +
# `tokio::time::timeout`, so the binary needs a multi-thread runtime.
# `hostname` provides the machine name in a cross-platform way (we pass
# it to InternalRuntime::new which surfaces it as `host.env("SDH_HOSTNAME")`
# on the Lua side).
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs"] }
hostname           = "0.4"

# Local wall-clock formatting for the per-run JSON dump file name:
# `<script_stem>_<hostname>_YYYYMMDDhhmmss_fff.json` (see src/main.rs::output_file_name).
# std::time::SystemTime can only produce a Duration since epoch; converting
# that to a local-timezone string requires a tz library. `chrono` is the
# de-facto choice. `default-features = false` + explicit `clock` drops
# the wasmbind shim we have no use for on Windows / Unix targets.
chrono             = { version = "0.4", default-features = false, features = ["clock"] }

# Workspace-wide lint policy. Each member crate opts in via
# `[lints] workspace = true` in its own Cargo.toml.
[workspace.lints.clippy]
pedantic    = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"

[lints]
workspace = true
