[package]
name = "rust-poc-contracts"
version = "0.1.0"
edition = "2024"
description = "Placeholder crate for cross-workspace data types — currently empty"
license = "MIT"
publish = false

[dependencies]
# Kept available so future wire types can be `#[derive(Serialize,
# Deserialize)]` without re-adding the dep on first touch. Removing
# `serde` would just postpone the inevitable.
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
