[package]
name = "rust-poc-greeter"
version = "0.1.0"
edition = "2024"
description = "Greeter trait + per-language implementations"
license = "MIT"
publish = false

[dependencies]
rust-poc-contracts = { path = "../contracts" }
# `tracing` macros are no-ops at runtime when no subscriber is
# initialised (unit tests don't install one), so the greeter can use
# them freely without forcing test setup. Same pattern as
# `sdh-fleet-client/service` depending on `tracing` but not on
# `tracing-subscriber`.
tracing            = "0.1"

[lints]
workspace = true
